--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-camera": "^4.2.1",
     "react-native-paper": "^5.11.4",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-navigation-header-buttons": "^11.1.1",
+    "@expo/vector-icons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
