--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
+    "formik": "^2.4.5",
     "lottie-react-native": "^6.4.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
