--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vision-camera": "^3.6.17",
-    "react-navigation-header-buttons": "^11.1.1"
+    "react-navigation-header-buttons": "^11.1.1",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
