--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.17",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
     "expo-linear-gradient": "~12.3.0",
