--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-vision-camera": "^3.6.17",
     "react-navigation-header-buttons": "^11.1.1",
-    "expo-image-picker": "~14.3.2"
+    "expo-image-picker": "~14.3.2",
+    "expo-media-library": "~15.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
