--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-vision-camera": "^3.6.17",
     "react-navigation-header-buttons": "^11.1.1",
     "expo-image-picker": "~14.3.2",
-    "expo-media-library": "~15.4.1"
+    "expo-media-library": "~15.4.1",
+    "expo-splash-screen": "~0.20.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
