--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-camera": "~13.4.4",
+    "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
+    "expo-media-library": "~15.4.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
@@ -27,10 +31,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vision-camera": "^3.6.17",
-    "react-navigation-header-buttons": "^11.1.1",
-    "expo-image-picker": "~14.3.2",
-    "expo-media-library": "~15.4.1",
-    "expo-splash-screen": "~0.20.5"
+    "react-navigation-header-buttons": "^11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
