--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
