--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.22.3",
+    "@react-native-community/datetimepicker": "^7.6.2",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-calendar": "~11.3.2",
     "expo-camera": "~13.4.4",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
@@ -24,8 +26,10 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "i18next": "^23.10.1",
     "lottie-react-native": "^6.4.1",
     "react": "18.2.0",
+    "react-i18next": "^14.1.0",
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -33,7 +37,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vision-camera": "^3.6.17",
-    "react-navigation-header-buttons": "^11.1.1"
+    "react-navigation-header-buttons": "^11.1.1",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
