--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.22.3",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
     "@react-navigation/native-stack": "^6.9.17",
+    "@vonage/server-sdk": "^3.14.0",
+    "axios": "^1.6.8",
+    "base-64": "^1.0.0",
+    "Buffer": "^0.0.0",
+    "encode": "^1.0.1",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
     "expo-calendar": "~11.3.2",
     "expo-camera": "~13.4.4",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-media-library": "~15.4.1",
+    "expo-sms": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
@@ -37,8 +44,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vision-camera": "^3.6.17",
-    "react-navigation-header-buttons": "^11.1.1",
-    "expo-av": "~13.4.1"
+    "react-navigation-header-buttons": "^11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
