--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.22.3",
-    "@react-native-community/datetimepicker": "^7.6.3",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native": "^6.1.12",
@@ -40,6 +40,7 @@
     "react-native": "0.72.6",
     "react-native-camera": "^4.2.1",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
